Made some changes

--- a/about/about.html
+++ b/about/about.html
@@ -7,7 +7,7 @@
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<button style="background-color:#180f14;"><a href="http://127.0.0.1:5500/project1.html">HOME </a></button>
+<button style="background-color:#180f14;"><a href="http://127.0.0.1:5500/index.html">HOME </a></button>
  
   <style>
     body {
@@ -22,12 +22,12 @@
     }
   </style>
   
-  <link rel="stylesheet" href="style2.css">
+  <link rel="stylesheet" href="/style/style2.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <h1> About Me </h1>
 <body>
     <div class="clearfix">
-        <img src="14.jpg" class="col-md-2 float-md-end mb-3 ms-md-8" alt=".......">
+        <img src="/img/14.jpg" class="col-md-2 float-md-end mb-3 ms-md-8" alt=".......">
       
         <p>
            My name is Arsema Zere, I am an assistant manager at a private company. I am Eritrean living in Uganda.
