--- a/about/home.html
+++ b/about/home.html
@@ -15,7 +15,7 @@
   </style>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style/style.css">
 
   <!-- <button class="btn"><a href="http://127.0.0.1:5500/project1.html"><i class="fa fa-home"></i></a></button>
     <button class="btn"><i class="fa fa-bars" ></i></button>
@@ -30,10 +30,10 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/project1.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:5500/about.html">About Author</a>
+            <a class="nav-link" href="http://127.0.0.1:5500/about/about.html">About Author</a>
           </li>
           <li class="nav-item">
 
@@ -48,10 +48,10 @@
   </nav>
 <p style="font-size: x-large; position: center;"> <b>My Work and Study Experiece</b> </p1>
 <body>
-  <script src="./css/bootstrapJS/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="style2.css">
+  <script src="/css/bootstrapJS/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="/style/style2.css">
 
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="4.jpg" location= "center" width="500px" height="200px">
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="/img/4.jpg" location= "center" width="500px" height="200px">
 
 
   <p> For many, the idea of going back to school while working a full time job can daunting.
