--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <nav class="navbar navbar-dark" style="background-color: #2c2228;">
     <div class="container-fluid">
@@ -19,12 +19,12 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/home.html">Student life</a>
+            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/about/home.html">Student life</a>
           </li>
           
           <li class="nav-item">
 
-            <a class="nav-link" href="http://127.0.0.1:5500/about.html">About Author </a>
+            <a class="nav-link" href="http://127.0.0.1:5500/about/about.html">About Author </a>
           </li>
 
         </ul>
@@ -43,24 +43,24 @@
         <div class="slide">
           <div class="slide-number">
 
-            <img src="8.jpg" style="width:100%">
+            <img src="/img/8.jpg" style="width:100%">
           </div>
         </div>
         <div class="slide">
           <div class="slide-number">
 
-            <img src="9.jpg" style="width:100%">
+            <img src="/img/9.jpg" style="width:100%">
           </div>
         </div>
         <div class="slide">
           <div class="slide-number">
-            <img src="4.jpg" style="width:100%">
+            <img src="/img/4.jpg" style="width:100%">
 
           </div>
         </div>
         <div class="slide">
           <div class="slide-number">
-            <img src="6.jpg" style="width:100%">
+            <img src="/img/6.jpg" style="width:100%">
 
           </div>
         </div>
@@ -176,9 +176,9 @@
 
         </div>
       <div class="col-3" style="border: 2px; text-align: end;">Featured Post<br>
-        <a href="http://127.0.0.1:5500/project1.html#"> My Purpose of Joining</a><br>
-        <a href="http://127.0.0.1:5500/home.html"> How to Study While Working</a><br>
-        <a href="http://127.0.0.1:5500/project1.html#">My class Experience</a>
+        <a href="http://127.0.0.1:5500/index.html"> My Purpose of Joining</a><br>
+        <a href="http://127.0.0.1:5500/about/home.html"> How to Study While Working</a><br>
+        <a href="http://127.0.0.1:5500/index.html">My class Experience</a>
       </div>
     </div>
   </div>
