--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style/style.css">
    <nav class="navbar navbar-dark" style="background-color: #2c2228;">
     <div class="container-fluid">
