changed file position

--- a/about/about.html
+++ b/about/about.html
@@ -5,6 +5,7 @@
 <title style="font-size:medium">Arsema First Blog</title>
 <link rel="stylesheet" href="/css/bootstrapCSS/bootstrap.min.css">
 
+
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <button style="background-color:#180f14;"><a href="http://127.0.0.1:5500/index.html">HOME </a></button>
@@ -22,7 +23,7 @@
     }
   </style>
   
-  <link rel="stylesheet" href="/style/style2.css">
+  <link rel="stylesheet" href="/css/style2.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <h1> About Me </h1>
 <body>
@@ -50,7 +51,7 @@
       
        
       </div>
-
+      <script src="/css/bootstrapJS/bootstrap.bundle.min.js"></script>
   </body>
 </head>
 <html>
