--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="css/style.css">
    <nav class="navbar navbar-dark" style="background-color: #2c2228;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Welcome To My Blog</a>
@@ -165,13 +163,12 @@
         <br>
         <br>
 
-        <footer>
-          <address>
+         <address>
             Written by: Arsema Zere<br>
             Contact: <a href="arsutsegai@gmil.com"> arsutsegai@gmil.com</a><br>
             <a href="tel:+256773875187"></a>
           </address>
-        </footer>
+        
 
         </div>
       <div class="col-3" style="border: 2px; text-align: end;">Featured Post<br>
