--- a/about/home.html
+++ b/about/home.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/css/bootstrapCSS/bootstrap.min.css">
+
 <head>
   <style>
     body {
@@ -15,7 +16,8 @@
   </style>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style2.css">
 
   <!-- <button class="btn"><a href="http://127.0.0.1:5500/project1.html"><i class="fa fa-home"></i></a></button>
     <button class="btn"><i class="fa fa-bars" ></i></button>
@@ -48,8 +50,8 @@
   </nav>
 <p style="font-size: x-large; position: center;"> <b>My Work and Study Experiece</b> </p1>
 <body>
-  <script src="/css/bootstrapJS/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="/style/style2.css">
+  
+  
 
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="/img/4.jpg" location= "center" width="500px" height="200px">
 
@@ -127,6 +129,7 @@
       </p>
     </li>
   </ol>
+  <script src="/css/bootstrapJS/bootstrap.bundle.min.js"></script>
 </body>
 </head>
 
