changed file position

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/about/home.html">Student life</a>
+            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/about/home.text">Student life</a>
           </li>
           
           <li class="nav-item">
 
-            <a class="nav-link" href="http://127.0.0.1:5500/about/about.html">About Author </a>
+            <a class="nav-link" href="http://127.0.0.1:5500/about/about.text">About Author </a>
           </li>
 
         </ul>
