--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title style="font-size:medium">Arsema First Blog</title>
 
-<link rel="stylesheet" href="/css/bootstrapCSS/bootstrap.min.css">
+<link rel="stylesheet" href="/myexperience/css/bootstrapCSS/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="/myexperience/css/style.css">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
@@ -22,14 +22,14 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://127.0.0.1:5500/custom/about.html">About Author</a>
+          <a class="nav-link" href="/myexperience/custom/about.html">About Author</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="http://127.0.0.1:5500/custom/home.html">Student Life</a></li>
+            <li><a class="dropdown-item" href="/myexperience/custom/home.html">Student Life</a></li>
             <li><a class="dropdown-item" href="#"></a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#"></a></li>
@@ -50,24 +50,24 @@
   <div class="slide-wrapper">
   <div class="slide">
   <div class="slide-number">
-  <img src="/img/8.jpg" style="width:100%">
+  <img src="/myexperience/img/8.jpg" style="width:100%">
    </div>
    </div>
         <div class="slide">
           <div class="slide-number">
 
-            <img src="/img/9.jpg" style="width:100%">
+            <img src="/myexperience/img/9.jpg" style="width:100%">
           </div>
         </div>
         <div class="slide">
           <div class="slide-number">
-            <img src="/img/4.jpg" style="width:100%">
+            <img src="/myexperience/img/4.jpg" style="width:100%">
 
           </div>
         </div>
         <div class="slide">
           <div class="slide-number">
-            <img src="/img/6.jpg" style="width:100%">
+            <img src="/myexperience/img/6.jpg" style="width:100%">
 
           </div>
         </div>
@@ -182,7 +182,7 @@
 
         </div>
   </div>
-  <script src="./css/bootstrapJS/bootstrap.bundle.min.js"></script>
+  <script src="./myexperience/css/bootstrapJS/bootstrap.bundle.min.js"></script>
 
 </body>
 </head>
