--- a/myexperience/custom/home.html
+++ b/myexperience/custom/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/css/bootstrapCSS/bootstrap.min.css">
+<link rel="stylesheet" href="/myexperience/css/bootstrapCSS/bootstrap.min.css">
 
 <head>
   <style>
@@ -16,8 +16,8 @@
   </style>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/style2.css">
+  <link rel="stylesheet" href="/myexperience/css/style.css">
+  <link rel="stylesheet" href="/myexperience/css/style2.css">
 
   <!-- <button class="btn"><a href="http://127.0.0.1:5500/project1.html"><i class="fa fa-home"></i></a></button>
     <button class="btn"><i class="fa fa-bars" ></i></button>
@@ -32,10 +32,10 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:5500/about/about.html">About Author</a>
+            <a class="nav-link" href="/myexperience/custom/about.html">About Author</a>
           </li>
           <li class="nav-item">
 
@@ -53,7 +53,7 @@
   
   
 
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="/img/4.jpg" location= "center" width="500px" height="200px">
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="/myexperience/img/4.jpg" location= "center" width="500px" height="200px">
 
 
   <p> For many, the idea of going back to school while working a full time job can daunting.
@@ -129,7 +129,7 @@
       </p>
     </li>
   </ol>
-  <script src="/css/bootstrapJS/bootstrap.bundle.min.js"></script>
+  <script src="/myexperience/css/bootstrapJS/bootstrap.bundle.min.js"></script>
 </body>
 </head>
 
