--- a/myexperience/index.html
+++ b/myexperience/index.html
@@ -182,7 +182,7 @@
 
         </div>
   </div>
-  <script src="./myexperience/css/bootstrapJS/bootstrap.bundle.min.js"></script>
+  <script src="/myexperience/css/bootstrapJS/bootstrap.bundle.min.js"></script>
 
 </body>
 </head>
