--- a/myexperience/custom/about.html
+++ b/myexperience/custom/about.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/myexperience/css/style2.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
- <button style="background-color:#180f14;"><a href="/myexperience/index.html">HOME </a></button>
+ <button style="background-color:#180f14;"><a href="../../index.html">HOME </a></button>
  
   <style>
     body {
