--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
          <address>
             Written by: Arsema Zere<br>
-            Contact: <a href="arsutsegai@gmil.com"> arsutsegai@gmil.com</a><br>
+            Contact: <a href="arsutsegai@gmail.com"> arsutsegai@gmail.com</a><br>
           
           </address>
         
