--- a/myexperience/custom/about.html
+++ b/myexperience/custom/about.html
@@ -40,7 +40,7 @@
         <p>
             <address>
               Written by: Arsema Zere<br> 
-              Contact: <a href="arsutsegai@gmil.com"> arsutsegai@gmil.com</a><br> 
+              Contact: <a href="arsutsegai@gmail.com"> arsutsegai@gmail.com</a><br> 
               <a href="tel:+256773875187"></a>
               </address>
             </p>
